// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NameList insert correctly 1`] = `
<div>
  <div>
    <h1>
      카운터
    </h1>
    <h2>
      1
    </h2>
    <button
      onClick={[Function]}
    >
      +
    </button>
    <button
      onClick={[Function]}
    >
      -
    </button>
  </div>
  <form
    onSubmit={[Function]}
  >
    <label>
      이름
    </label>
    <input
      name="name"
      onChange={[Function]}
      type="text"
      value=""
    />
    <button
      type="submit"
    >
      등록
    </button>
  </form>
  <ul>
    <li>
      Kyung
    </li>
    <li>
      Seok
    </li>
    <li>
      Test
    </li>
  </ul>
</div>
`;

exports[`NameList match correctly 1`] = `
<div>
  <div>
    <h1>
      카운터
    </h1>
    <h2>
      1
    </h2>
    <button
      onClick={[Function]}
    >
      +
    </button>
    <button
      onClick={[Function]}
    >
      -
    </button>
  </div>
  <form
    onSubmit={[Function]}
  >
    <label>
      이름
    </label>
    <input
      name="name"
      onChange={[Function]}
      type="text"
      value=""
    />
    <button
      type="submit"
    >
      등록
    </button>
  </form>
  <ul>
    <li>
      Kyung
    </li>
    <li>
      Seok
    </li>
  </ul>
</div>
`;
